updated so it now points to right place and has right description

--- a/_posts/2019-12-21-Visualizing-the-Beta-Distribution.html
+++ b/_posts/2019-12-21-Visualizing-the-Beta-Distribution.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Immediate Link Test</title>
+    <title>Visualizing the Beta Distribution</title>
     <script type="text/javascript">
       window.onload = function(){
         window.location.href = "https://alpha.iodide.io/notebooks/3869/?viewMode=report";
@@ -10,7 +10,6 @@
     </script>
   </head>
   <body style="display:none;">
-    An iodide notebook on visualizing the beta distribution.
-
+    Prototype of an Iodide Notebook for visualizing the beta distribution
   </body>
 </html>
